--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,73 +1,49 @@
-* {
-   margin: 0;
-   padding: 0;
+*{
    box-sizing: border-box;
 }
-body {
-   padding: 0 1rem;
-   background-color: #fafafa;
-   overflow-y: hidden;
+body{
+   padding: 15px;
 }
-h2 {
-   margin: 2rem 1rem;
-}
-p {
-   text-indent: 1.5rem;
-   margin-bottom: 0.5rem;
-}
-button {
-   appearance: none !important;
-   cursor: pointer;
-   padding: 0.75rem;
-   min-width: 6rem;
-   border: 0px;
-   transition: background-color 100ms linear;
-   border-radius: 1.25rem;
-   margin: .5rem;
-   outline-style: none;
-   font-weight: 700;
-   color: #fff;
-}
-
-.hidd {
+.hidd{
    display: none;
 }
-.tac {
+.tac{
    text-align: center;
 }
-.df {
+.df{
    display: flex;
 }
-.jcsa {
-   justify-content: space-around;
+.jcsb{
+   justify-content: space-between;
+}
+.jcc{
+   justify-content: center;
+}
+.btn{
+   width: 7rem;
 }
 
-.btn-green {
-   background-color: rgb(28, 204, 28);
-}
-.btn-red {
-   background-color: rgb(255, 0, 64);
-}
-.quiz{
-   // position: relative;
-}
-.question_btns {
-   margin-top: 2rem;
-}
-.question {
-   width: 80%;
-   padding: 1rem;
-   max-width: 800px;
-   border-radius: 1rem;
-   border: 0;
-   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
-   margin: 3rem auto;
-   min-height: 50vh;
-   background-color: #fff;
-   // position: absolute;
-   // left: 50%;
-   // transform: translateX(-50%);
-   // z-index: 2;
+h2{
+   font-size: 1.5rem;
 }
 
-
+.startScreen h1{
+   font-size: 2rem;
+   margin-top: 40vh;
+}
+.logoSpan{
+   color: olive;
+}
+.card_item{
+   margin-top: 25vh;
+   width: 100%;
+}
+.card{
+   min-width: 72%;
+}
+.btn_red{
+   background: rgb(255, 0, 64);
+}
+.btn_red:hover{
+   background: rgb(253, 40, 93);
+}
